# BreezeStyleSheets

./: .editorconfig  .gitignore  CHANGELOG.md  ISSUES.md  README.md  Test Coverage.md  breeze.qrc  breeze_resouces.py  breeze_resources.py  configure.py  dark.py  dark.qss  example.py  git.py  light.py  light.qss  native.py  pyproject.toml  recompile_breeze_resources.sh  setup.cfg  single.py  test.py  vcs.py  windows_dark.py  windows_dark.qss
assets/: branch_closed.svg.in  branch_end.svg.in  branch_end_arrow.svg.in  branch_more.svg.in  branch_more_arrow.svg.in  calendar_next.svg.in  checkbox_unchecked.svg.in  close.svg.in  gallery.md  radio_checked.svg.in  radio_unchecked.svg.in  sizegrip.svg.in  undock.svg.in  undock_hover.svg.in  vline.svg.in  vmovetoolbar.svg.in  vseptoolbar.svg.in
ci/: configure_all.sh  theme.sh
configure/: dark-green.json  dark-purple.json  dark.json  lightv2.json
dark/: stylesheet.qss
example/: README.md  advanced-dock.py  breeze_theme.hpp  breeze_theme.py  dial.py  lcd.py  placeholder_text.py  shared.py  slider.py  standard_icons.py  titlebar.py  url.py  whatsthis.py  widgets.py
example/cmake/: CMakeLists.txt  breeze.cmake  test_qt.cpp
extension/: README.md
light/: stylesheet.qss
recipes/: README.md
resources/: breeze_pyqt5.py  breeze_pyqt6.py  breeze_pyside2.py  breeze_pyside6.py
scripts/: cmake.sh  configure.sh  fmt.sh  headless.sh  lint.sh  shared.sh  test_theme.cpp  theme.sh
template/: branch_closed.svg.in  branch_end.svg.in  branch_end_arrow.svg.in  branch_more.svg.in  branch_open.svg.in  calendar_previous.svg.in  checkbox_checked.svg.in  checkbox_indeterminate.svg.in  close.svg.in  dialog-close.svg.in  dialog-help.svg.in  dialog-ok.svg.in  dialog-open.svg.in  dialog-save.svg.in  dialog-saveall.svg.in  dialog_cancel.svg.in  dialog_discard.svg.in  dialog_no.svg.in  dialog_reset.svg.in  down_arrow.svg.in  file_dialog_contents.svg.in  file_dialog_end.svg.in  file_dialog_info.svg.in  file_dialog_list.svg.in  file_link.svg.in  folder.svg.in  hard_drive.svg.in  hmovetoolbar.svg.in  home_directory.svg.in  hseptoolbar.svg.in  icons.json  left_arrow.svg.in  maximize.svg.in  menu.svg.in  message-critical.svg.in  message-question.svg.in  message_information.svg.in  message_warning.svg.in  (+9 more)
(+111 files in other folders)
